--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,26 @@
   font-size: 2rem;
   color: blue;
 }
+
+.scaleButton1 {
+  position: absolute;
+  bottom: 17vh;
+  right: 2rem;
+  cursor: pointer;
+  border-radius: 10%;
+  text-align: center;
+  width: 2.5rem;
+  box-shadow: black 0px 13px 26px 0px;
+  font-size: 2rem;
+}
+.scaleButton2 {
+  position: absolute;
+  bottom: 10vh;
+  right: 2rem;
+  cursor: pointer;
+  border-radius: 10%;
+  text-align: center;
+  width: 2.5rem;
+  box-shadow: black 0px 13px 26px 0px;
+  font-size: 2rem;
+}
